update email confirm and add payment receipt.

--- a/SSD-Alkolq/wwwroot/html/emailconfirmation.html
+++ b/SSD-Alkolq/wwwroot/html/emailconfirmation.html
@@ -176,7 +176,7 @@
                                                             </table><table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="1549d6f2-1ca9-4490-93d4-07fb587c7e75" data-mc-module-version="2019-10-22">
                                                                 <tbody>
                                                                     <tr>
-                                                                        <td style="padding:18px 0px 18px 0px; line-height:40px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><h1 style="text-align: center"><span style="font-family: helvetica, sans-serif; font-size: 36px"><strong>Welcome to Alkolq.</strong></span></h1><div></div></div></td>
+                                                                        <td style="padding:18px 0px 18px 0px; line-height:40px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><h1 style="text-align: center"><span style="font-family: &quot;courier new&quot;, courier, monospace; font-size: 48px"><strong>Welcome to Alkolq.</strong></span></h1><div></div></div></td>
                                                                     </tr>
                                                                 </tbody>
                                                             </table><table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="ffcb805b-82c3-401b-b268-7812c86f216f" data-mc-module-version="2019-10-22">
@@ -184,9 +184,9 @@
                                                                     <tr>
                                                                         <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                             <div>
-                                                                                <div style="font-family: inherit; text-align: center"><span style="font-size: 18px; font-family: helvetica, sans-serif">Thank you for registering with us!</span></div>
-                                                                                <div style="font-family: inherit; text-align: center"><span style="font-size: 18px; font-family: helvetica, sans-serif">Please click here to confirm your email address.</span></div>
-                                                                                <div style="font-family: inherit; text-align: center"><span style="font-size: 18px; font-family: helvetica, sans-serif">Thank you!</span></div><div></div>
+                                                                                <div style="font-family: inherit; text-align: center"><span style="font-family: &quot;courier new&quot;, courier, monospace; font-size: 24px">Thank you for registering with us!</span></div>
+                                                                                <div style="font-family: inherit; text-align: center"><span style="font-family: &quot;courier new&quot;, courier, monospace; font-size: 24px">Please click here to confirm your email address.</span></div>
+                                                                                <div style="font-family: inherit; text-align: center"><span style="font-family: &quot;courier new&quot;, courier, monospace; font-size: 24px">Thank you!</span></div><div></div>
                                                                             </div>
                                                                         </td>
                                                                     </tr>
@@ -205,8 +205,8 @@
                                                                             <table border="0" cellpadding="0" cellspacing="0" class="wrapper-mobile" style="text-align:center;">
                                                                                 <tbody>
                                                                                     <tr>
-                                                                                        <td align="center" bgcolor="#770b0b" class="inner-td" style="border-radius:6px; font-size:16px; text-align:center; background-color:inherit;">
-                                                                                            <a href="{EMAIL_CONFIRM_LINK}" style="background-color:#770b0b; border:0px solid #333333; border-color:#333333; border-radius:6px; border-width:0px; color:#ffffff; display:inline-block; font-size:16px; font-weight:400; letter-spacing:0px; line-height:normal; padding:16px 20px 16px 20px; text-align:center; text-decoration:none; border-style:solid; font-family:helvetica,sans-serif;" target="_blank">Verify Email</a>
+                                                                                        <td align="center" bgcolor="#620023" class="inner-td" style="border-radius:6px; font-size:16px; text-align:center; background-color:inherit;">
+                                                                                            <a href="{EMAIL_CONFIRM_LINK}" style="background-color:#620023; border:0px solid #333333; border-color:#333333; border-radius:6px; border-width:0px; color:#ffffff; display:inline-block; font-size:20px; font-weight:400; letter-spacing:0px; line-height:normal; padding:16px 20px 16px 20px; text-align:center; text-decoration:none; border-style:solid; font-family:courier new,courier,monospace;" target="_blank">Verify Email</a>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </tbody>
